--- a/manifest_extra.json
+++ b/manifest_extra.json
@@ -143,6 +143,11 @@
 "isEntry": true,
 "src": "resources/assets_template/js/scripts_ordens_servicos_ost3.js"
 },
+ "resources/assets_template/js/scripts_relatorios_exaustoes.js": {
+     "file": "assets/scripts_relatorios_exaustoes.js",
+     "isEntry": true,
+     "src": "resources/assets_template/js/scripts_relatorios_exaustoes.js"
+ },
 "resources/assets_template/js/scripts_empresas.js": {
 "file": "assets/scripts_empresas.js",
 "isEntry": true,
