--- a/manifest_extra.json
+++ b/manifest_extra.json
@@ -138,6 +138,11 @@
 "isEntry": true,
 "src": "resources/assets_template/js/scripts_dashboards3.js"
 },
+"resources/assets_template/js/scripts_patrimonio.js": {
+"file": "assets/scripts_patrimonio.js",
+"isEntry": true,
+"src": "resources/assets_template/js/scripts_patrimonio.js"
+},
 "resources/assets_template/js/scripts_materiais.js": {
 "file": "assets/scripts_materiais.js",
 "isEntry": true,
