--- a/manifest_extra.json
+++ b/manifest_extra.json
@@ -143,30 +143,30 @@
 "isEntry": true,
 "src": "resources/assets_template/js/scripts_patrimonio.js"
 },
-"resources/assets_template/js/scripts_materiais.js": {
-"file": "assets/scripts_materiais.js",
+"resources/assets_template/js/scripts_produtos.js": {
+"file": "assets/scripts_produtos.js",
 "isEntry": true,
-"src": "resources/assets_template/js/scripts_materiais.js"
+"src": "resources/assets_template/js/scripts_produtos.js"
 },
-"resources/assets_template/js/scripts_materiais_entradas.js": {
-"file": "assets/scripts_materiais_entradas.js",
+"resources/assets_template/js/scripts_produtos_entradas.js": {
+"file": "assets/scripts_produtos_entradas.js",
 "isEntry": true,
-"src": "resources/assets_template/js/scripts_materiais_entradas.js"
+"src": "resources/assets_template/js/scripts_produtos_entradas.js"
 },
-"resources/assets_template/js/scripts_materiais_listagem_geral.js": {
-"file": "assets/scripts_materiais_listagem_geral.js",
+"resources/assets_template/js/scripts_produtos_listagem_geral.js": {
+"file": "assets/scripts_produtos_listagem_geral.js",
 "isEntry": true,
-"src": "resources/assets_template/js/scripts_materiais_listagem_geral.js"
+"src": "resources/assets_template/js/scripts_produtos_listagem_geral.js"
 },
-"resources/assets_template/js/scripts_materiais_movimentacoes.js": {
-"file": "assets/scripts_materiais_movimentacoes.js",
+"resources/assets_template/js/scripts_produtos_movimentacoes.js": {
+"file": "assets/scripts_produtos_movimentacoes.js",
 "isEntry": true,
-"src": "resources/assets_template/js/scripts_materiais_movimentacoes.js"
+"src": "resources/assets_template/js/scripts_produtos_movimentacoes.js"
 },
-"resources/assets_template/js/scripts_materiais_controle_situacoes.js": {
-"file": "assets/scripts_materiais_controle_situacoes.js",
+"resources/assets_template/js/scripts_produtos_controle_situacoes.js": {
+"file": "assets/scripts_produtos_controle_situacoes.js",
 "isEntry": true,
-"src": "resources/assets_template/js/scripts_materiais_controle_situacoes.js"
+"src": "resources/assets_template/js/scripts_produtos_controle_situacoes.js"
 },
 "resources/assets_template/js/scripts_brigadas_incendios.js": {
 "file": "assets/scripts_brigadas_incendios.js",
